     as the devices become better known). [issue #3047, PR #3081]
   * Improved support for Eaton 5S1500LCD and 5S1600LCD (US version). [#2380]
   * Fixed `libhid::HIDDumpTree()` to optionally get more info at driver
     start-up even if debug is not enabled, this was shown to help with
     some devices like CP1500PFCLCDa. This is managed by new option
     `explorehidall` which is enabled by default for certain CPS models.
     [PR #3247]
   * The driver used to report `CHRG` status if the device was not "fully
     charged", however the latter status was only queried and reported by
     some (not all) subdrivers and probably not by all devices out in the
     field. Now we fall back to check that if the "fully charged" status
     is not defined at all, consider the `battery.charge` value (100 or not).
     [issue #3146]
   * For `ups.status` processing, do not assume that `!online`==`offline`,
     it may well be that the device just did not report anything (e.g. if
     it does not really talk USB HID). [#3080]
   * Suggest iterative testing with explicit `subdrivers` if collected data
     looks wrong. [#2058, #3061 et al]
   * Check if the subdriver code (mapping table) and the device report
     descriptor sit together well -- namely, that we do not unwittingly
     ignore any useful reports, and that we successfully use reasonably many
     of the existing mappings. Suggest how user can help improve the driver
     if too few data points were seen. [#3082, #3095]

 - `upsd` data server updates:
   * Sometimes "Data for UPS [X] is stale" and "UPS [X] data is no longer
     stale" messages were logged in the same second, especially no busy
     systems. Now we allow one more second on top of `MAXAGE` setting to
     declare the device dead, just in case fractional/whole second rounding
     comes into play and breaks things. [issue #661]

 - `upsdrvctl` tool updates:
   * Make use of `setproctag()` and `getproctag()` to report parent/child