@@ -185,8 +185,9 @@ https://github.com/networkupstools/nut/milestone/12
    * Fixed `libhid::HIDDumpTree()` to optionally get more info at driver
      start-up even if debug is not enabled, this was shown to help with
      some devices like CP1500PFCLCDa. This is managed by new option
-     `explorehidall` which is enabled by default for certain CPS models.
-     [PR #3247]
+     `fetchallhid` which is enabled by default for certain CPS models
+     and disabled otherwise. Previously it might be enabled as a side
+     effect of activated debug logging. [PR #3247]
    * The driver used to report `CHRG` status if the device was not "fully
      charged", however the latter status was only queried and reported by
      some (not all) subdrivers and probably not by all devices out in the
